# web-word-frequency

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
backend/: __init__.py  app.py  config.py  operations.py  pagination.py
backend/redis/: __init__.py  scrapped_url.py  web_word_frequency.py
